--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -5,20 +5,63 @@
 }
 
 .main-btn {
-    width: 80%;
+    width: 400px;
     height: 50vh;
-    border-radius: 10%;
-    border: 5px solid white;
+    border: 5px solid rgba(255,255,255,0.8);
     background-color: transparent;
-    color: white;
+    color: whitesmoke;
     font-size: 50px;
     font-weight: bold;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    text-align: center;
 }
 .main-btn:hover{
     background-color: rgba(255,255,255,0.3);
+    text-decoration: none;
+    color: whitesmoke;
+}
+.box{
+    width: 50%;
+
 }
 
-.container{
-    width: 100%;
-    height: auto;
+@media screen and (max-width: 975px) {
+   .main-btn{
+       width: 300px;
+   }
 }
+@media screen and (max-width: 650px) {
+    .main-btn{
+        width: 200px;
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .box{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .main-btn{
+        width: 100% ;
+        height: 25vh;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+    .container{
+        flex-direction: column;
+    }
+}
+
+.logo-box{
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+}
+.logo-img{
+    max-width: 149px;
+}
+
